# sa-anonymous-chat

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
benchmark/: README.md  conftest.js  get_all_messages.js  get_homepage.js  get_messages_count.js  post_message.js
src/api/: app.py  chat.py
src/templates/: index.html
